# server/src/controllers/dashboard.controller.js
@@ -2,9 +2,14 @@ import { asyncHandler, successResponse } from "../utils/helpers.js";
 import * as dashboardService from "../services/dashboard.service.js";
 
 export const getAdminDashboard = asyncHandler(async (req, res) => {
-  // Gọi service lấy dữ liệu tổng quan
-  const analyticsData = await dashboardService.getDashboardAnalytics();
+  // Lấy các tham số lọc từ query
+  const { startDate, endDate } = req.query;
 
-  // Trả về dữ liệu bằng helper chuẩn của hệ thống
+  // Gọi service và truyền dữ liệu lọc
+  const analyticsData = await dashboardService.getDashboardAnalytics({
+    startDate,
+    endDate,
+  });
+
   successResponse(res, analyticsData, "Tải dữ liệu Dashboard thành công");
 });
